mcp/0.1/modules/ROOT/pages/mcp-connector-studio.adoc

= Using Anypoint Studio to Configure {connector-name} Connector {version} 
:exchange-search-name: mcp
:connector-name: MCP
:version: 0.1.0-BETA
:lc-connector-name: mcp
:studio-connector-name: MCP Connector
:tls:

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-source,Configure a source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<configure-other-fields,Configure the other connector fields>>.
. <<debug,Debug the app>>.
. <<view-app-log,View the App Log>>.
. <<deploy,Deploy the app>>.


If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see the xref:{lc-connector-name}-connector-reference.adoc[{connector-name} Connector Reference].

== Before You Begin

Add the `-Dmule.http.service.implementation=NETTY` property to your `AnypointStudio.ini` file. 

On Mac OS:

. Go to your `/Applications` folder, right-click the *AnypointStudio* package and select *Show Package Contents*.
. Go to *Contents > Eclipse*, and open the `AnypointStudio.ini` file.
. Add the `-Dmule.http.service.implementation=NETTY` property:
+
[source,text]
----
-Dorg.mule.tooling.runtime.args=-XX:-UseBiasedLocking,-Dfile.encoding=UTF-8,-XX:+UseG1GC,-XX:+UseStringDeduplication,-Dmule.deployment.forceParseConfigXmls=true,-Dmule.http.service.implementation=NETTY
----

On Windows:

. Locate your `AnypointStudio.ini` file inside your Anypoint Studio installation directory.
. Add the `-Dmule.http.service.implementation=NETTY` property:
+
[source,text]
----
-Dorg.mule.tooling.runtime.args=-XX:-UseBiasedLocking,-Dfile.encoding=UTF-8,-XX:+UseG1GC,-XX:+UseStringDeduplication,-Dmule.deployment.forceParseConfigXmls=true,-Dmule.http.service.implementation=NETTY
----

[[create-mule-project]]
== Create a Mule Project

include::connectors::partial$t-studio-partial.adoc[tags=create-project-intro]

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

include::connectors::partial$t-studio-partial.adoc[tags=add-connector-to-project]

[[configure-source]]
== Configure a Source

include::connectors::partial$t-studio-partial.adoc[tags=configure-source-intro]
You can configure one of these sources to use with {connector-name} Connector:

* xref:mcp-connector-reference.adoc#OnNewSessionListener[On New Session Listener] 
* xref:mcp-connector-reference.adoc#ResourceListener[Resource Listener] 
* xref:mcp-connector-reference.adoc#ToolListener[Tool Listener]

include::connectors::partial$t-studio-partial.adoc[tags=listener-scheduler-descriptions]

include::connectors::partial$t-studio-partial.adoc[tags=listener-steps]

[[add-connector-operation]]
== Add a Connector Operation to the Flow

include::connectors::partial$t-studio-partial.adoc[tags=add-connector-operation]

[[configure-global-element]]
== Configure a Global Element for the Connector

include::connectors::partial$t-studio-partial.adoc[tags=global-element-intro]

include::connectors::partial$t-studio-partial.adoc[tags=property-placeholders]

include::connectors::partial$t-studio-partial.adoc[tags=global-element-first-steps]

. In the *General* tab, in *Connection*, select the authentication method to configure. The MCP protocol's security is mostly based on the OAuth Authorization Code flow. To keep it compatible with different systems and uses, the connector also supports other authentication methods, including:
* <<basic-authentication>>
* <<oauth-auth-code>>
* <<oauth-client-credentials>>
* <<digest>>
* <<ntlm>>

ifdef::tls[]
include::connectors::partial$t-studio-partial.adoc[tags=global-element-tls-steps]
endif::[]

ifndef::tls[]
include::connectors::partial$t-studio-partial.adoc[tags=global-element-no-tls-steps]
endif::[]


[[basic-authentication]]
=== Basic Authentication

Enter the authentication information in the *General* tab of the *Global Element Properties* screen to configure Basic authentication:

. Select *Connection > Basic* and enter or set the values for these fields:
+
[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Username | Username used to initialize the session.
|Password | Password used to authenticate the user.
|Preemptive | If set to true, the client sends its authentication credentials (username and password) with the initial HTTP request to the server, rather than waiting for the server to challenge (401 Unauthorized) the client.
|===

[[oauth-auth-code]]
=== OAuth Authorization Code

Used when the client is acting on behalf of an enduser (human). For instance, an agent calls an MCP tool implemented by a SaaS system.

[[oauth-client-credentials]]
===  OAuth Client Credentials

Used for machine-to-machine authentication. The client application authenticates itself directly with the authorization server using its client ID and client secret, and receives an access token.

This is used when an application is accessing resources on its own behalf, not on behalf of a user.

[[digest]]
=== Digest

An HTTP authentication scheme that uses a challenge-response mechanism to avoid sending passwords in plain text. It involves hashing the password and other information to verify the client's identity.

[[ntlm]]
=== NTLM

A Microsoft authentication protocol used primarily in Windows environments. It uses a challenge-response mechanism and is commonly used for network authentication.

[[configure-other-fields]]
== Configure Additional Connector Fields

include::connectors::partial$t-studio-partial.adoc[tags=config-additional-fields]

[[debug]]
== Debug the App

Debug your Mule application using the embedded debugger in Studio.

Before debugging your app, add the `-Dmule.http.service.implementation=NETTY` property to your debug configuration.

See xref:mule-runtime::logging-and-debugging.adoc[].

[[view-app-log]]
== View the Application Log

include::connectors::partial$t-studio-partial.adoc[tags=view-app-log]


[[deploy]]
== Deploy the App

include::connectors::partial$mcp-connector-partial.adoc[tag="deploy"]

== Next Step

* xref:mcp-connector-examples.adoc[Try the MCP Connector examples].
* xref:mcp-connector-config-topics.adoc[Apply security to the MCP server].

== See Also

include::connectors::partial$t-studio-partial.adoc[tags=see-also]
* xref:runtime-manager::deployment-strategies.adoc[]
