mcp/1.1/modules/ROOT/pages/mcp-connector-studio.adoc
= Using Anypoint Studio to Configure {connector-name} Connector {version} 
:exchange-search-name: mcp
:connector-name: MCP
:version: 1.0
:lc-connector-name: mcp
:studio-connector-name: MCP Connector
:tls:


include::connectors::partial$t-studio-partial.adoc[tags=topic-intro]

[[create-mule-project]]
== Create a Mule Project

include::connectors::partial$t-studio-partial.adoc[tags=create-project-intro]

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

include::connectors::partial$t-studio-partial.adoc[tags=add-connector-to-project]

[[configure-source]]
== Configure a Source

include::connectors::partial$t-studio-partial.adoc[tags=configure-source-intro]
You can configure one of these sources to use with {connector-name} Connector:

* xref:mcp-connector-reference.adoc#OnNewSessionListener[On New Session Listener] 
* xref:mcp-connector-reference.adoc#ResourceListener[Resource Listener] 
* xref:mcp-connector-reference.adoc#ToolListener[Tool Listener]

include::connectors::partial$t-studio-partial.adoc[tags=listener-scheduler-descriptions]

include::connectors::partial$t-studio-partial.adoc[tags=listener-steps]

[[add-connector-operation]]
== Add a Connector Operation to the Flow

include::connectors::partial$t-studio-partial.adoc[tags=add-connector-operation]

[[configure-global-element]]
== Configure a Global Element for the Connector

include::connectors::partial$t-studio-partial.adoc[tags=global-element-intro]

include::connectors::partial$t-studio-partial.adoc[tags=property-placeholders]

include::connectors::partial$t-studio-partial.adoc[tags=global-element-first-steps]

. In the *General* tab, in *Connection*, select the authentication method to configure. The MCP protocol's security is mostly based on the OAuth Authorization Code flow. To keep it compatible with different systems and uses, the connector also supports other authentication methods, including:
* <<basic-authentication>>
* <<oauth-auth-code>>
* <<oauth-client-credentials>>
* <<digest>>
* <<ntlm>>

ifdef::tls[]
include::connectors::partial$t-studio-partial.adoc[tags=global-element-tls-steps]
endif::[]

ifndef::tls[]
include::connectors::partial$t-studio-partial.adoc[tags=global-element-no-tls-steps]
endif::[]


[[basic-authentication]]
=== Basic Authentication

Enter the authentication information in the *General* tab of the *Global Element Properties* screen to configure Basic authentication:

. Select *Connection > Basic* and enter or set the values for these fields:
+
[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Username | Username used to initialize the session.
|Password | Password used to authenticate the user.
|Preemptive | If set to true, the client sends its authentication credentials (username and password) with the initial HTTP request to the server, rather than waiting for the server to challenge (401 Unauthorized) the client.
|===

[[oauth-auth-code]]
=== OAuth Authorization Code

Used when the client is acting on behalf of an enduser (human). For instance, an agent calls an MCP tool implemented by a SaaS system.

[[oauth-client-credentials]]
===  OAuth Client Credentials

Used for machine-to-machine authentication. The client application authenticates itself directly with the authorization server using its client ID and client secret, and receives an access token.

This is used when an application is accessing resources on its own behalf, not on behalf of a user.

[[digest]]
=== Digest

An HTTP authentication scheme that uses a challenge-response mechanism to avoid sending passwords in plain text. It involves hashing the password and other information to verify the client's identity.

[[ntlm]]
=== NTLM

A Microsoft authentication protocol used primarily in Windows environments. It uses a challenge-response mechanism and is commonly used for network authentication.

[[configure-other-fields]]
== Configure Additional Connector Fields

include::connectors::partial$t-studio-partial.adoc[tags=config-additional-fields]

[[debug]]
== Debug the App

Debug your Mule application using the embedded debugger in Studio.

See xref:mule-runtime::logging-and-debugging.adoc[].

[[view-app-log]]
== View the Application Log

include::connectors::partial$t-studio-partial.adoc[tags=view-app-log]

[[apply-mcp-policies]]
== Apply MCP Policies

MCP Connector has support for policies to enhance security, monitoring, and governance of your MCP server endpoints. You can apply policies to control access, add authentication, implement rate limiting, and provide additional security layers.

Available MCP policies include:

* *MCP Support Policy*
+
Adds MCP support to a Flex Gateway MCP server instance. This policy is required for your MCP server instance to function properly.
* *MCP Schema Validation Policy* 
+
Validates MCP requests to ensure they conform to the MCP specification
* *MCP Attribute-Based Access Control Policy*
+
Controls access to tools, resources, and prompts based on user information such as Tiers, IP, Headers, or Claims


=== Configure MCP Policies

To apply policies to your MCP server:

. In Anypoint Studio, open your Mule project.
. Right-click on your Mule configuration file and select *Anypoint Platform* > *Manage Policies*.
. In the *Policies* tab, click *Apply Policy*.
. Select the appropriate policy for your use case.
. Configure the policy parameters according to your requirements.
. Save the configuration.

=== Policy Configuration Examples

==== MCP Support Policy (Required)

The MCP Support policy is essential for MCP server functionality:

```yaml
policies:
  - mcp-support:
      enabled: true
```

==== MCP Schema Validation Policy

```yaml
policies:
  - mcp-schema-validation:
      enabled: true
      strict: false
```

==== MCP Attribute-Based Access Control Policy

```yaml
policies:
  - mcp-attribute-access-control:
      enabled: true
      rules:
        - resource: "tools/*"
          allow:
            - tier: "premium"
            - ip: "192.168.1.0/24"
        - resource: "resources/*"
          allow:
            - header: "X-API-Key"
              value: "valid-key"
```

==== Rate Limiting Policy

```yaml
policies:
  - rate-limiting:
      enabled: true
      maxRequests: 100
      timePeriod: 60
      timeUnit: "SECONDS"
```

=== Best Practices for MCP Policies

* **Security First**: Always apply authentication policies to production MCP servers
* **Monitor Usage**: Use logging policies to track MCP client activity
* **Rate Limiting**: Implement rate limiting to prevent abuse and ensure fair usage
* **Environment-Specific**: Configure different policies for development, staging, and production environments
* **Regular Review**: Periodically review and update policy configurations

For more information about available policies and their configuration, see xref:gateway::policies-included-directory.adoc[].

== Next Step

* xref:mcp-connector-examples.adoc[Try the MCP Connector examples].
* xref:mcp-connector-config-topics.adoc[Apply security to the MCP server].

== See Also

include::connectors::partial$t-studio-partial.adoc[tags=see-also]
* xref:runtime-manager::deployment-strategies.adoc[]
* xref:gateway::policies-included-directory.adoc[]

## Example Structure:
```xml
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:mcp="http://www.mulesoft.org/schema/mule/mcp"
      xmlns:http="http://www.mulesoft.org/schema/mule/http"
      xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="
        http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
        http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
        http://www.mulesoft.org/schema/mule/mcp http://www.mulesoft.org/schema/mule/mcp/current/mule-mcp.xsd">

    <http:listener-config name="HTTP_Listener_config">
        <http:listener-connection host="localhost" port="8081" />
    </http:listener-config>

    <mcp:server-config name="MCP_Server" serverName="Mule MCP Server" serverVersion="1.0.0">
        <mcp:streamable-http-server-connection 
            listenerConfig="HTTP_Listener_config" 
            mcpEndpointPath="/mcp">
            <mcp:custom-headers>
                <mcp:custom-header key="X-API-Version" value="1.0.0"/>
                <mcp:custom-header key="X-Server-ID" value="${server.id}"/>
            </mcp:custom-headers>
        </mcp:streamable-http-server-connection>
    </mcp:server-config>

    <flow name="my-mcp-flow">
        <mcp:tool-listener config-ref="MCP_Server" name="example-tool">
            <mcp:description>Example MCP tool</mcp:description>
            <mcp:parameters-schema><![CDATA[{
                "$schema": "http://json-schema.org/draft-07/schema#",
                "type": "object",
                "properties": {},
                "required": []
            }]]></mcp:parameters-schema>
            <mcp:responses>
                <mcp:text-tool-response-content text="Hello from MCP!" />
            </mcp:responses>
        </mcp:tool-listener>
    </flow>

</mule>